--- a/services/_includes/adoc/antivirus_configvars.adoc
+++ b/services/_includes/adoc/antivirus_configvars.adoc
@@ -1,10 +1,10 @@
 // set the attribute to true or leave empty, true without any quotes.
 
-:show-deprecation: false
+:show-deprecation: true
 
 ifeval::[{show-deprecation} == true]
 
-[#deprecation-note-2024-01-05-14-24-21]
+[#deprecation-note-2024-01-05-19-54-31]
 [caption=]
 .Deprecation notes for the antivirus service
 [width="100%",cols="~,~,~,~",options="header"]
@@ -13,6 +13,11 @@ ifeval::[{show-deprecation} == true]
 | Deprecation Version
 | Removal Version
 | Deprecation Replacement
+
+| Changing the envvar type for consistency reasons.
+| 5.0
+| 6.0
+| ANTIVIRUS_ICAP_SCAN_TIMEOUT
 |===
 
 endif::[]
@@ -240,13 +245,22 @@ a| [subs=-attributes]
 The socket clamav is running on. Note the default value is an example which needs adaption according your OS.
 
 a|`ANTIVIRUS_ICAP_TIMEOUT` +
-
+xref:deprecation-note-2024-01-05-19-54-31[Deprecation Note]
 a| [subs=-attributes]
 ++int64 ++
 a| [subs=-attributes]
-++300 ++
+++0 ++
 a| [subs=-attributes]
 Timeout for the ICAP client.
+
+a|`ANTIVIRUS_ICAP_SCAN_TIMEOUT` +
+
+a| [subs=-attributes]
+++Duration ++
+a| [subs=-attributes]
+++5m0s ++
+a| [subs=-attributes]
+Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.
 
 a|`ANTIVIRUS_ICAP_URL` +
 
